Toast atado a la ventana de aplicación en lugar de la pantalla. Iconos de notificacion y store

--- a/PuntoDeVenta/Main.resx
+++ b/PuntoDeVenta/Main.resx
@@ -224,7 +224,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
         SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAApDoAAAJNU0Z0AUkBTAMBAQAB
-        KAEEASgBBAFAAQABQAEABP8BIQEACP8BQgFNATYHAAE2AwABKAQAAQECAAFAAwABAQEAASAHAAEB/wD/
+        QAEEAUABBAFAAQABQAEABP8BIQEACP8BQgFNATYHAAE2AwABKAQAAQECAAFAAwABAQEAASAHAAEB/wD/
         AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/
         AP8A/wD/AP8AZQADCAEKAVEBbwFRAfcBPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4B
         OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
@@ -485,4 +485,80 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>48</value>
   </metadata>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAABMLAAATCwAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPLCNlDxwDTy8cE1//HB
+        Nf/dkBH/1HgA/9R4AP/UeAD/1HgA/9R4AP/UeAD/8cE1//HBNf/xwTX/8cE1//HBNf/xwTX/8cE1//HB
+        Nf/xwTX/8cE1//HBNf/xwTX/8cE1//HANPLxwDROAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA8cA1qPHB
+        Nf/xwTX/8cE1/92QEf/UeAD/1HgA/9R4AP/UeAD/1HgA/9R4AP/xwTX/8cE1//HBNf/xwTX/8cE1//HB
+        Nf/xwTX/8cE1//HBNf/xwTX/8cE1//HBNf/xwTX/8cE1//HANacAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD/5VCr/+ZQ///mUP//5lD/7LQr/+KbGf/imxn/4psZ/+KbGf/imxn/4psZ///mUP//5lD//+ZQ///m
+        UP//5lD//+ZQ///mUP//5lD//+ZQ///mUP//5lD//+ZQ///mUP//5lD//+VQqwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAP/lUKv/5lD//+ZQ///mUP/stCv/4psZ/+KbGf/imxn/4psZ/+KbGf/imxn//+ZQ///m
+        UP//5lD//+ZQ///mUP//5lD//+ZQ///mUP//5lD//+ZQ///mUP//5lD//+ZQ///mUP//5VCrAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/+VQq//mUP//5lD//+ZQ/+y0K//imxn/4psZ/+KbGf/imxn/4psZ/+Kb
+        Gf//5lD//+ZQ//XNPf/imxn/4psZ/+KbGf/imxn/4psZ/+KbGf/imxn/7LQr///mUP//5lD//+ZQ///l
+        UKsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/5VCr/+ZQ///mUP//5lD/7LQr/+KbGf/imxn/4psZ/+Kb
+        Gf/imxn/4psZ///mUP//5lD/9c09/+KbGf/imxn/4psZ/+KbGf/imxn/4psZ/+KbGf/stCv//+ZQ///m
+        UP//5lD//+VQqwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP/lUKv/5lD//+ZQ///mUP/stCv/4psZ/+Kb
+        Gf/imxn/4psZ/+KbGf/imxn//+ZQ///mUP/1zT3/4psZ/+KbGf/imxn/4psZ/+KbGf/imxn/4psZ/+y0
+        K///5lD//+ZQ///mUP//5VCrAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/+VQq//mUP//5lD//+ZQ/+y0
+        K//imxn/4psZ/+KbGf/imxn/4psZ/+KbGf//5lD//+ZQ//XNPf/imxn/4psZ/+KbGf/imxn/4psZ/+Kb
+        Gf/imxn/7LQr///mUP//5lD//+ZQ///lUKsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/5VCr/+ZQ///m
+        UP//5lD/7LQr/+KbGf/imxn/4psZ/+KbGf/imxn/4psZ///mUP//5lD/9c09/+KbGf/imxn/4psZ/+Kb
+        Gf/imxn/4psZ/+KbGf/stCv//+ZQ///mUP//5lD//+VQqwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP/l
+        UKv/5lD//+ZQ///mUP/stCv/4psZ/+KbGf/imxn/4psZ/+KbGf/imxn//+ZQ///mUP/1zT3/4psZ/+Kb
+        Gf/imxn/4psZ/+KbGf/imxn/4psZ/+y0K///5lD//+ZQ///mUP//5VCrAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA/+VQq//mUP//5lD//+ZQ///mUP//5lD//+ZQ///mUP//5lD//+ZQ///mUP//5lD//+ZQ///m
+        UP//5lD//+ZQ///mUP//5lD//+ZQ///mUP//5lD//+ZQ///mUP//5lD//+ZQ///lUKsAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD/5VCr/+ZQ///mUP//5lD//+ZQ///mUP//5lD//+ZQ///mUP//5lD//+ZQ///m
+        UP//5lD//+ZQ///mUP//5lD//+ZQ///mUP//5lD//+ZQ///mUP//5lD//+ZQ///mUP//5lD//+VQqwAA
+        AAAAAAAAAAAAAAAAAAAAAAAAnjs0mp89Nf6fPDX/nzw1/588Nf+fPDX/nzw1/588Nf+fPDX/nzw1/588
+        Nf+fPDX/nzw1/588Nf+fPDX/nzw1/588Nf+fPDX/nzw1/588Nf+fPDX/nzw1/588Nf+fPDX/nzw1/588
+        Nf+fPTX+njw1mQAAAAAAAAAAAAAAAAAAAACeOzT8nzw1/588Nf+fPDX/nzw1/588Nf+fPDX/nzw1/588
+        Nf+fPDX/nzw1/588Nf+fPDX/nzw1/588Nf+fPDX/nzw1/588Nf+fPDX/nzw1/588Nf+fPDX/nzw1/588
+        Nf+fPDX/nzw1/588Nf+eOzT8AAAAAAAAAAAAAAAAAAAAAMxxafHPdW3/z3Vt/891bf/PdW3/z3Vt/891
+        bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891
+        bf/PdW3/z3Vt/891bf/PdW3/z3Vt/8xxafMAAAAAAAAAAAAAAAAAAAAAz3Rsq891bf/PdW3/z3Vt/891
+        bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891
+        bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3VtqgAAAAAAAAAAAAAAAAAAAADQdG1yz3Vt/891
+        bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891
+        bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/QdG1yAAAAAAAAAAAAAAAAAAAAAM52
+        bTrPdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891
+        bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/810azkAAAAAAAAAAAAA
+        AAAAAAAA2m1tB851bPjPdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891
+        bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/OdWz4v39fCAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAznVsyM91bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891
+        bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/891bf/PdW3/z3Vt/890
+        bMcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACvTkaqr01F/65MRP+tS0P/rUtD/6xKQv+rSUH/q0hB/6pI
+        QP+pRz//qEY+/6hFPv+nRT3/pkQ8/6ZDPP+lQjv/pEI6/6NBOf+jQDn/oj84/6E/N/+hPjf/oD02/588
+        Nf+ePDT/nTo0qgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAK9ORqqvTUX/rkxE/65MRP+tS0P/rEpC/6tJ
+        Qf+rSEH/qkhA/6lHP/+pRj//qEU+/6dFPf+mRDz/pkM8/6VCO/+kQjr/pEE6/6NAOf+iPzj/r1BI/69Q
+        SP+gPTb/t1lS/6VCO/+dOjSqAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAsE1FqK9NRf+uTET/rkxE/61L
+        Q/+sSkL/rElC/6tJQf+qSED/qUc//6lGP/+oRj7/p0U9/6dEPf+mQzz/pUM7/6RCOv+kQTr/o0A5/6JA
+        OP+wUEj/r1BI/6A9Nv+4WlL/pUI7/507M6cAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACvTEZQr0xF869N
+        Rf+uTET/rUtD/6xKQv+sSkL/q0lB/6pIQP+qR0D/qUc//6hGPv+nRT3/p0Q9/6ZEPP+lQzv/pUI7/6RB
+        Ov+jQDn/okA4/6I/OP+hPjf/oD02/6A9Nv+fOzXznjozTwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/////////////////////+AAAAfgAAAH4AAAB+AAAAfgAAAH4AAAB+AA
+        AAfgAAAH4AAAB+AAAAfgAAAH4AAAB8AAAAPAAAADwAAAA8AAAAPAAAADwAAAA8AAAAPgAAAH4AAAB+AA
+        AAfgAAAH4AAAB/////////////////////8=
+</value>
+  </data>
 </root>
