--- a/PuntoDeVenta/ToastForm.resx
+++ b/PuntoDeVenta/ToastForm.resx
@@ -123,4 +123,81 @@
   <metadata name="toastHide.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>126, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAABMLAAATCwAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AABbUTMZXk8zZ1xNNKVcTTPBXE0z2VxNM9lcTTPBXU0zpF5PM2dbUTMZAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AABdTDU5XU40vVxNNP1dTjT/XU40/11ONP9dTjT/XU40/11ONP9dTjT/XU40/1xNNP1dTjS9W00yOAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AABdUDUTXE00q11ONP5dTjT/XU40/11ONP9dTjT/XU40/11ONP9dTjT/XU40/11ONP9dTjT/XU40/11O
+        NP9dTjT+XU40qmNVOBIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAXVA1Jl1NM9hdTjT/XU40/11ONP9dTjT/XU40/11ONP9dTjT/XU40/11ONP9dTjT/XU40/11O
+        NP9dTjT/XU40/11ONP9dTjT/XE003F5NNSsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAFtONipdTTTwXU40/11ONP9dTjT/XU40/11ONP9dTjT/XU40/11ONP9dTjT/XU40/11O
+        NP9dTjT/XU40/11ONP9dTjT/XU40/11ONP9dTjT/XE00711QMSkAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAABjVTgSXU40211ONP9dTjT/XU40/11ONP9dTjT/XU40/11ONP9dTjT/XU40/11O
+        NP9dTjT/XU40/11ONP9dTjT/XU40/11ONP9dTjT/XU40/11ONP9dTjT/XU4z3llMMxQAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAF1OM6xdTjT/XU40/11ONP9dTjT/XU40/11ONP9dTjT/WlhG/1N+
+        j/9PkbT/T5rE/0yNrP9NfpD/UXR8/1ZjXf9dTzb/XU40/11ONP9dTjT/XU40/11ONP9dTjT/XU40qgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABcTjM3XU40/l1ONP9dTjT/XU40/11ONP9dUjr/UoWc/02o
+        3v9QsOv/ULDs/1Cx7P9Uy+H/VNLd/0e64P8/qeP/P6nj/0Gj1/9Jiqf/VmVf/11ONP9dTjT/XU40/11O
+        NP9dTjT/XE80OgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAF1NNL9dTjT/XU40/11ONP9dTjT/XU40/1XQ
+        3P9Szen/Ub/t/1Cy7P9QsOz/Urvo/1XV3f9V1d3/Uc7d/z+p4/8/qeP/P6zj/0G24f9Ftsz/TaGf/11O
+        NP9dTjT/XU40/11ONP9dTjS9AAAAAAAAAAAAAAAAAAAAAAAAAABYTjEaXU40/l1ONP9dTjT/XU40/11O
+        NP9dTjT/Xujx/1/o8f9f6PH/Xujw/1rl7v9Y4uz/V+Ts/0/h5/9J1d3/Rs3V/0bZ3v9E5un/ROfq/0Tn
+        6v9LvLf/XU40/11ONP9dTjT/XU40/1xNNP1bUTMZAAAAAAAAAAAAAAAAAAAAAFxNM2ldTjT/XU40/11O
+        NP9dTjT/XU40/11ONP9c5ez/X+jx/1/o8f9f6PH/X+jx/1/o8f9f6PH/Tufs/0Tn6v9E5+r/ROfq/0Tn
+        6v9E5+r/ROfq/06qof9dTjT/XU40/11ONP9dTjT/XU40/1xNNGYAAAAAAAAAAAAAAAAAAAAAXU0zp11O
+        NP9dTjT/XU40/11ONP9dTjT/XU40/1jKy/9f6PH/X+jx/1/o8f9f6PH/X+jx/1/o8f9O5+z/ROfq/0Tn
+        6v9E5+r/ROfq/0Tn6v9E5un/Vnhn/11ONP9dTjT/XU40/11ONP9dTjT/XE00pQAAAAAAAAAAAAAAAAAA
+        AABcTTPBXU40/11ONP9dTjT/XU40/11ONP9dTjT/XWBJ/1vi6f9f6PH/X+jx/1/o8f9f6PH/X+jx/03n
+        7P9E5+r/ROfq/0Tn6v9E5+r/ROfq/1GckP9dTjT/XU40/11ONP9dTjT/XU40/11ONP9dTTS/AAAAAAAA
+        AAAAAAAAAAAAAF1ONNtdTjT/XU40/11ONP9dTjT/XU40/11ONP9dTjT/WYl7/1/o8f9f6PH/X+jx/1/o
+        8f9f6PH/Tefs/0Tn6v9E5+r/ROfq/0Tn6v9F3uD/XU81/11ONP9dTjT/XU40/11ONP9dTjT/XU40/1xN
+        M9kAAAAAAAAAAAAAAAAAAAAAXE003F1ONP9dTjT/XU40/11ONP9dTjT/XU40/11ONP9cW0P/X+jx/1/o
+        8f9f6PH/X+jx/1/o8f9N5+z/ROfq/0Tn6v9E5+r/ROfq/0rEwP9dTjT/XU40/11ONP9dTjT/XU40/11O
+        NP9dTjT/XU4z2gAAAAAAAAAAAAAAAAAAAABdTTTCXU40/11ONP9dTjT/XU40/11ONP9dTjT/XU40/11O
+        NP9b5Oz/X+jx/1/o8f9f6PH/X+jx/03n7P9E5+r/ROfq/0Tn6v9E5+r/T6ef/11ONP9dTjT/XU40/11O
+        NP9dTjT/XU40/11ONP9cTjPAAAAAAAAAAAAAAAAAAAAAAF1NM6ddTjT/XU40/11ONP9dTjT/XU40/11O
+        NP9dTjT/XU40/1jY3P9f6PH/X+jx/1/o8f9f6PH/Tefs/0Tn6v9E5+r/ROfq/0Tn6v9Ti33/XU40/11O
+        NP9dTjT/XU40/11ONP9dTjT/XU40/1xNNKUAAAAAAAAAAAAAAAAAAAAAXUw0al1ONP9dTjT/XU40/11O
+        NP9dTjT/XU40/11ONP9dTjT/WL27/1/o8f9f6PH/X+jx/1/o8f9O5+z/ROfq/0Tn6v9E5+r/ROfq/1hq
+        Vv9dTjT/XU40/11ONP9dTjT/XU40/11ONP9dTjT/Xk8zZwAAAAAAAAAAAAAAAAAAAABeSzgbXU40/l1O
+        NP9dTjT/XU40/11ONP9dTjT/XU40/11ONP9bgnH/X+jx/1/o8f9f6PH/X+jx/07n7P9E5+r/ROfq/0Tn
+        6v9H19b/XU81/11ONP9dTjT/XU40/11ONP9dTjT/XU40/11ONP5bUTYcAAAAAAAAAAAAAAAAAAAAAAAA
+        AABdTTS/XU40/11ONP9dTjT/XU40/11ONP9dTjT/XU40/11ONP9Z3OL/X+jx/1/o8f9f6PH/Tufs/0Tn
+        6v9E5+r/ROfq/1KQgv9dTjT/XU40/11ONP9dTjT/XU40/11ONP9dTjT/XU40vQAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAFtNMjhdTjT+XU40/11ONP9dTjT/XU40/11ONP9dTjT/XU40/1xpVP9b4+r/X+jx/1/o
+        8f9O6Oz/ROfq/0Tm6f9OqaD/XU81/11ONP9dTjT/XU40/11ONP9dTjT/XU40/11ONP9fTTM7AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAFxNM65dTjT/XU40/11ONP9dTjT/XU40/11ONP9dTjT/XU40/11Q
+        OP9Wq6b/VdXX/1G2sP9Jycf/WGtX/11ONP9dTjT/XU40/11ONP9dTjT/XU40/11ONP9dTjT/XU4zrAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAY1U4El1ONNtdTjT/XU40/11ONP9dTjT/XU40/11O
+        NP9dTjT/XU40/1SEdf9Rkob/XU81/0y7tv9cUzr/XU40/11ONP9dTjT/XU40/11ONP9dTjT/XU40/11O
+        M95ZTDMUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAXk01K11NNPBdTjT/XU40/11O
+        NP9dTjT/XU40/11ONP9dTjT/XFQ7/0u8t/9H0dD/UpaJ/11ONP9dTjT/XU40/11ONP9dTjT/XU40/11O
+        NP9dTTTwW042KgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAXVA1Jl1N
+        M9hdTjT/XU40/11ONP9dTjT/XU40/11ONP9dTjT/XU40/11ONP9dTjT/XU40/11ONP9dTjT/XU40/11O
+        NP9dTjT/XE003F5NNSsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAXVA1E1xNM65dTjT/XU40/11ONP9dTjT/XU40/11ONP9dTjT/XU40/11ONP9dTjT/XU40/11O
+        NP9dTjT/XU40/11OM6xjVTgSAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAFxPNDpcTjPAXU40/l1ONP9dTjT/XU40/11ONP9dTjT/XU40/11O
+        NP9dTjT/XU40/l1NNL9cTzQ6AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABeSzgbXE0zaV1NM6ddTTTCXU4z2l1O
+        M9pdTTTCXU0zp11OM2heSzgbAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA////////////4Af//4AB//4AAH/8AAA/+AAAH/AAAA/wAAAP4AAAB+AA
+        AAfAAAADwAAAA8AAAAPAAAADwAAAA8AAAAPAAAADwAAAA8AAAAPAAAAD4AAAB+AAAAfwAAAP8AAAD/gA
+        AB/8AAA//gAAf/+AAf//4Af///////////8=
+</value>
+  </data>
 </root>
