--- a/PuntoDeVenta/FormDialogs/ProductoEtiquetaDialog.resx
+++ b/PuntoDeVenta/FormDialogs/ProductoEtiquetaDialog.resx
@@ -290,7 +290,7 @@
     <value>CenterParent</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>EtiquetaDialog</value>
+    <value>ProductoEtiquetaDialog</value>
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
     <value>System.Windows.Forms.Form, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
